# 260r-Final-Project-Search-Engine

./: .gitignore  README.md  bitcoin_parser_test.py
PyBC_260r/: read_dat.py
azure/: .gitignore  indivtasks.sh  sql.sh  tasks.json
blocktools_py3/: .gitignore  block.py  block.py.bak  block_opcode.py  blocktools.py  parse_and_store_data.py  parse_and_store_data.py.0062a4a1378c9025607ad2d366f24ca4.tmp  sight.py
blocktools_py3/csv/: 2009-01-03 18:15:05.000000+00:00 (UTC).csv  2009-01-09 02:54:25.000000+00:00 (UTC).csv  2009-01-09 02:55:44.000000+00:00 (UTC).csv  2009-01-09 03:02:53.000000+00:00 (UTC).csv  2009-01-09 03:16:28.000000+00:00 (UTC).csv  2009-01-09 03:23:48.000000+00:00 (UTC).csv  2009-01-09 03:29:49.000000+00:00 (UTC).csv  2009-01-09 03:39:29.000000+00:00 (UTC).csv  2009-01-09 03:45:43.000000+00:00 (UTC).csv  2009-01-09 03:54:39.000000+00:00 (UTC).csv  2009-01-09 04:05:52.000000+00:00 (UTC).csv  2009-01-09 04:12:40.000000+00:00 (UTC).csv  (+8667 more)
data/: single_worker_medium.txt  single_worker_small.txt  sqlite_large_indexed.txt  sqlite_large_unindexed.txt  sqlite_medium_indexed.txt  sqlite_medium_unindexed.txt  sqlite_small.txt  sqlite_small_unindexed.txt  three_workers_large.txt  three_workers_medium.txt  three_workers_small.txt
helloworld-tonic/: Cargo.toml
parser/: .gitignore  Cargo.toml
parser/proto/: search.proto
parser/src/: custom_format.rs  lib.rs  main.rs  master.rs  output_writer.rs  parser.rs  reader.rs  rpc_service.rs  sqlite.rs  sqlite_baseline.rs  transaction.rs  worker.rs
search/: Cargo.toml
search/src/: lib.rs  (+5 more)
sql/: baseline.sql
(+8681 files in other folders)
