[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "search-worker"
path = "src/worker.rs"

[[bin]] 
name = "search-master"
path = "src/master.rs"

[dependencies]
sha2 = "0.10.2"
nom = "7"
itertools = "0"
duplicate = "0"
rusqlite = { version = "0.27.0", features = ["bundled", "blob"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3" 
anyhow = "1"
futures = "0"
tarpc = { version = "0", features = ["full"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
cached = "0"
clap = { version = "3", features = ["derive"] }
hex = "0"
rand = "0"
